# memkeeper-warden

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md
.github/workflows/: ci.yml  cla.yml  release.yml
adapters/claude-code/: README.md  ai.warden.gateway.plist.template  install.sh  policy.starter.tsv  test_warden_gate.py  warden_gate.py  warden_skill_track.py
adapters/claude-code/fixtures/allowed/: sample.txt
adapters/claude-code/fixtures/skills/warden-selftest/: SKILL.md
adapters/mcp/: README.md  pyproject.toml  test_warden_mcp.py  warden_mcp.py
crates/warden-cli/: Cargo.toml
crates/warden-cli/src/: json.rs  log.rs  main.rs  serve.rs
crates/warden-cli/tests/: serve_loop.rs
crates/warden-core/: Cargo.toml
crates/warden-core/src/: audit.rs  broker.rs  capability.rs  lib.rs  manifest.rs  policy.rs  request.rs  scope.rs
docs/: CLA.md
