[project]
name = "warden-mcp"
version = "0.1.0"
description = "MCP bridge exposing the warden capability broker to MCP-capable agents (Claude Code, Cursor, ...)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT OR Apache-2.0"
keywords = ["security", "capability", "mcp", "local-first", "ai", "warden"]
dependencies = [
    "mcp>=1.0",
]

[project.scripts]
warden-mcp = "warden_mcp:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Single-module package: ship the bridge script directly.
include = ["warden_mcp.py"]
